content: CS0449 Project 2 check-off meetings

--- a/_posts/2024-09-14-CS0449-Checkoff.md
+++ b/_posts/2024-09-14-CS0449-Checkoff.md
@@ -2,17 +2,22 @@
 layout: post
 title: Schedule CS0449 Check-Off Meeting
 tags: ["CS 0449"]
-include: ['bs-tooltip', 'cal-cs449']
+include: ["bs-tooltip", "cal-cs449"]
 ---
 
 ## How to schedule and complete project check-off meetings
 
 ### Before the check-off
 
-First, make sure you are scheduling your meeting with the right TA. I can't/won't assign grades if you're not enrolled in one of my assigned sections:
+<div class="card border-danger mb-3">
+  <div class="card-body" markdown="1">
+  {: .mb-0}
+  <span class="badge text-bg-danger">New</span>
+  We are trying out _rotating sections_ starting with Project 2. That means, you'll (possibly) meet with a different TA for each project check-off. See the [schedule](#schedule) below for more information.
+  </div>
+</div>
 
-- **Section 1135 (TuTh 14:30 – 15:45 @ Cathedral of Learning G8)**
-- **Section 1150 (MW 15:00 – 16:15 @ Lawrence Hall 209)**
+First, make sure you are scheduling your meeting with the right TA. I can't/won't assign grades if you're not enrolled in one of my assigned sections.
 
 Next, click the [link at the bottom of this page](#scheduler), to go to my scheduling page, where you can sign up for your meeting. I've set the times in 15-minute increments to allow for some buffer, but the actual meeting will be around ten minutes. Once you make an appointment, you should get a confirmation E-mail.
 
@@ -25,13 +30,12 @@ Check-off meetings are **held in person**. That means you'll have to come meet m
 [![Map to my office at Sennott Square]({% link /assets/img/office-location.jpg %}){: .float-md-end .col-9 .col-md-4}]({% link /assets/img/office-location.jpg %})
 {: .text-center}
 
-> _Come up to the 6th floor from the elevators, face the bathrooms, and go left. Go right and immediately left. On the right, you will see a short hallway numbered 6515, with a paper sign on the door saying what rooms are inside. My office is the one at the end on the right. If you can't find it, send me a message on Discord._
+> _Come up to the 6th floor from the elevators, face the bathrooms, and go left. Go right and immediately left. On the right, you will see a short hallway numbered 6515, with a paper sign on the door saying what rooms are inside. My office is the one at the end on the right._
 
-Check-off meeting no-shows result in an immediate check-off fail!
-{: .text-center .blink .text-danger}
 
 - If you have an extraordinary circumstance in which you cannot make your scheduled check-off meeting, **please send me a message ASAP**. I'll try to accommodate as much as possible (e.g., virtual check-off, reschedule), but **only if you message me beforehand**.
-- **A check-off meeting "no show" is by default considered a check-off fail**.
+- **A check-off meeting "no show" is by default considered a check-off fail.**{: .blink .text-danger}
+
 
 Once at my office, I'll ask you some questions about your submission and the project. Your job is to convince me that you wrote the code you submitted and that you understand it. You're allowed to look (only) at your submission on Gradescope, so I suggest **writing good/many comments in your submission**. You may also be asked to demonstrate your code, so be sure to **bring a laptop**.
 
@@ -40,14 +44,30 @@ After about ten or so minutes, you'll be told that you either _passed_ or _faile
 **You may not re-submit your assignment on GradeScope _after_ the check-off meeting**.
 
 ### Project Check-off Schedule
+{: id="schedule"}
 
-| Project                          | Check-off Begins | Check-off Ends |
-| :------------------------------- | :--------------: | :------------: |
-| **P1. BMP Steganography**        |  **2024-10-16**  | **2024-11-01** |
-| **P2. Dynamic Memory Allocator** |                  |                |
-|                                  |                  |                |
-|                                  |                  |                |
+<div markdown="1" class="overflow-x-auto">
+| Project                          | Check-off Begins | Check-off Ends | Sections           |
+| :------------------------------- | :--------------: | :------------: | :----------------: |
+| P1. BMP Steganography            |    2024-10-16    |   2024-11-01   | 1135, 1150         |
+| **P2. Dynamic Memory Allocator** |  **2024-11-05**  | **2024-11-19** | **1150**, **1110** |
+|                                  |                  |                |                    |
+|                                  |                  |                |                    |
 {: .table .table-light .table-hover .border .border-dark .w-auto .mx-auto}
+</div>
+
+#### Section Guide
+
+Section 1110
+: Lectures on MW 11:00 - 12:15 @ Sennott Square 5502
+
+Section 1135
+: Lectures on TuTh 14:30 – 15:45 @ Cathedral of Learning G8
+
+Section 1150
+: Lectures on MW 15:00 – 16:15 @ Lawrence Hall 209
+
+---
 
 <button class="mx-auto d-block btn btn-info text-dark"
         data-cal-link="shinwookim/cs0449"
