content: cs0449 project 3 checkoff

--- a/_posts/2024-09-14-CS0449-Checkoff.md
+++ b/_posts/2024-09-14-CS0449-Checkoff.md
@@ -32,10 +32,8 @@ Check-off meetings are **held in person**. That means you'll have to come meet m
 
 > _Come up to the 6th floor from the elevators, face the bathrooms, and go left. Go right and immediately left. On the right, you will see a short hallway numbered 6515, with a paper sign on the door saying what rooms are inside. My office is the one at the end on the right._
 
-
 - If you have an extraordinary circumstance in which you cannot make your scheduled check-off meeting, **please send me a message ASAP**. I'll try to accommodate as much as possible (e.g., virtual check-off, reschedule), but **only if you message me beforehand**.
 - **A check-off meeting "no show" is by default considered a check-off fail.**{: .blink .text-danger}
-
 
 Once at my office, I'll ask you some questions about your submission and the project. Your job is to convince me that you wrote the code you submitted and that you understand it. You're allowed to look (only) at your submission on Gradescope, so I suggest **writing good/many comments in your submission**. You may also be asked to demonstrate your code, so be sure to **bring a laptop**.
 
@@ -47,12 +45,11 @@ After about ten or so minutes, you'll be told that you either _passed_ or _faile
 {: id="schedule"}
 
 <div markdown="1" class="overflow-x-auto">
-| Project                          | Check-off Begins | Check-off Ends | Sections           |
-| :------------------------------- | :--------------: | :------------: | :----------------: |
-| P1. BMP Steganography            |    2024-10-16    |   2024-11-01   | 1135, 1150         |
-| **P2. Dynamic Memory Allocator** |  **2024-11-06**  | **2024-11-20** | **1150**, **1110** |
-|                                  |                  |                |                    |
-|                                  |                  |                |                    |
+| Project                           | Check-off Begins | Check-off Ends |    Sections    |
+| :-------------------------------- | :--------------: | :------------: | :------------: |
+| P1. BMP Steganography             |    2024-10-16    |   2024-11-01   |   1135, 1150   |
+| P2. Dynamic Memory Allocator      |    2024-11-06    |   2024-11-20   |   1150, 1110   |
+| **P3. Assembly Bombs & Exploits** |  **2024-12-02**  | **2024-12-13** | **1110, 1335** |
 {: .table .table-light .table-hover .border .border-dark .w-auto .mx-auto}
 </div>
 
