style: modernize overall scss theme
- minimize header for posts, post layout
- enhance dark mode colors
- improve scss file structure

--- a/_posts/2024-09-14-CS0449-Checkoff.md
+++ b/_posts/2024-09-14-CS0449-Checkoff.md
@@ -1,13 +1,12 @@
 ---
 layout: post
-title: Schedule CS0449 Check-Off Meeting
+title: CS0449 Project Check-Offs
+subtitle: How to schedule and complete project check-off meetings
 tags: ["CS 0449"]
 include: ["bs-tooltip", "cal-cs449"]
----
+--- 
 
-## How to schedule and complete project check-off meetings
-
-### Before the check-off
+## Before the check-off
 
 <div class="card border-danger mb-3">
   <div class="card-body" markdown="1">
@@ -23,7 +22,7 @@ Next, click the [link at the bottom of this page](#scheduler), to go to my sched
 
 > _You have approximately two weeks from the project deadline to complete your project check-off. I recommend completing the check-off as early as possible since it can get pretty crowded toward the check-off end date. Plus, it gives you adequate time to prepare for a check-off redo with Luis if you fail (see below)._
 
-### During the check-off meeting
+## During the check-off meeting
 
 Check-off meetings are **held in person**. That means you'll have to come meet me in my office (**6510 SENSQ**).
 
@@ -41,7 +40,7 @@ After about ten or so minutes, you'll be told that you either _passed_ or _faile
 
 **You may not re-submit your assignment on GradeScope _after_ the check-off meeting**.
 
-### Project Check-off Schedule
+## Project Check-off Schedule
 
 {: id="schedule"}
 
@@ -54,7 +53,7 @@ After about ten or so minutes, you'll be told that you either _passed_ or _faile
 {: .table .table-light .table-hover .border .border-dark .w-auto .mx-auto}
 </div>
 
-#### Section Guide
+### Section Guide
 
 Section 1110
 : Lectures on MW 11:00 - 12:15 @ Sennott Square 5502
@@ -69,5 +68,5 @@ Section 1150
         data-cal-link="shinwookim/cs0449"
         data-cal-namespace="cs0449"
         data-cal-config='{"layout":"month_view"}'>
-Click Here to Schedule Check-off
+        Click Here to Schedule Check-off
 </button>
