--- a/_posts/2024-09-14-CS0449-Checkoff.md
+++ b/_posts/2024-09-14-CS0449-Checkoff.md
@@ -45,11 +45,11 @@ After about ten or so minutes, you'll be told that you either _passed_ or _faile
 {: id="schedule"}
 
 <div markdown="1" class="overflow-x-auto">
-| Project                           | Check-off Begins | Check-off Ends |    Sections    |
-| :-------------------------------- | :--------------: | :------------: | :------------: |
-| P1. BMP Steganography             |    2024-10-16    |   2024-11-01   |   1135, 1150   |
-| P2. Dynamic Memory Allocator      |    2024-11-06    |   2024-11-20   |   1150, 1110   |
-| **P3. Assembly Bombs & Exploits** |  **2024-12-02**  | **2024-12-13** | **1110, 1335** |
+| Project                       | Check-off Begins | Check-off Ends |  Sections  |
+| :---------------------------- | :--------------: | :------------: | :--------: |
+| P1. BMP Steganography         |    2024-10-16    |   2024-11-01   | 1135, 1150 |
+| P2. Dynamic Memory Allocator  |    2024-11-06    |   2024-11-20   | 1150, 1110 |
+| P3. Assembly Bombs & Exploits |    2024-12-02    |   2024-12-13   | 1110, 1335 |
 {: .table .table-light .table-hover .border .border-dark .w-auto .mx-auto}
 </div>
 
